jenkins-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: "/"
  name: jenkins-ingress
  namespace: default
spec:
  rules:
    - host: hellowhale.id
      http:
        paths:
        - path: /
          backend:
            serviceName: jenkins-service
            servicePort: 8080
